--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.5.4",
+    "date-fns": "^2.15.0",
     "eslint-plugin-import": "^2.22.0",
     "graphql": "^15.3.0",
     "react": "^16.13.1",
