--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "apollo-server-express": "^2.16.1",
     "express": "^4.17.1",
-    "graphql-iso-date": "^3.6.1"
+    "graphql-iso-date": "^3.6.1",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
